# towr

./: .gitignore  Dockerfile  README.md  towr_readme.md
.devcontainer/: devcontainer.json
fpowr/: CMakeLists.txt  README.md  package.xml
fpowr/action/: FootstepPlan.action
fpowr/include/fpowr/: footstep_plan_extractor.h  fpowr_xpp_ee_map.h  initial_guess_extractor.h  nearest_plane_lookup.h
fpowr/launch/: fpowr.launch
fpowr/msg/: FootstepPlan.msg  InitialGuess.msg  InitialGuessArray.msg
fpowr/rviz/: footstep_planner.rviz
fpowr/src/: footstep_plan_client.cc  footstep_plan_server.cc  planar_region_republisher.cc  planar_terrain_from_bag_publisher.cc
towr/: CMakeLists.txt
towr/include/towr/models/: robot_model.h
towr/include/towr/models/go1/: go1_model.h  go1leg_inverse_kinematics.h  inverse_kinematics_go1.h
towr/include/towr/terrain/: grid_height_map.h  height_map_from_csv.h  rapidcsv.h
towr/include/towr/variables/: initial_guess_extractor.h
towr/src/: robot_model.cc
towr/src/go1/: go1leg_inverse_kinematics.cc  inverse_kinematics_go1.cc  urdf_visualizer_go1.cc
towr_ros/: CMakeLists.txt  package.xml
towr_ros/action/: FootstepPlan.action
towr_ros/bag/: perception_stairs.bag
towr_ros/include/towr_ros/: footstep_plan_extractor.h  initial_guess_extractor.h  nearest_plane_lookup.h  node_spline_ros_wrapper.h  phase_duration_ros_wrapper.h  spline_holder_ros_conversion.h  spline_holder_ros_wrapper.h
towr_ros/launch/: footstep_planner.launch  towr_ros.launch
towr_ros/msg/: ContactDatum.msg  InitialGuessArray.msg  NodeSpline.msg  PhaseDurations.msg  SingleRigidBody.msg  SplineHolder.msg
towr_ros/rviz/: footstep_planner.rviz  xpp_towr.rviz
towr_ros/src/: footstep_plan_client.cc  footstep_plan_server.cc  grid_map_republisher.cc  nearest_plane_lookup.cc  node_spline_ros_wrapper.cc  phase_duration_ros_wrapper.cc  planar_region_republisher.cc  planar_terrain_from_bag_publisher.cc  spline_holder_ros_wrapper.cc
